--- a/OMI/Views/Inventario/CreaEquipo.cshtml
+++ b/OMI/Views/Inventario/CreaEquipo.cshtml
@@ -12,32 +12,23 @@ ViewBag.Title="Inventario - Equipo de Computo - Crear ";
                 </div>
                 <div class="panel-body">
                     @Html.AntiForgeryToken()
-
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="container">
                         <form>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.Tipo, htmlAttributes: new { @class = "col-sm-2 col-form-label" })
+                                @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "col-sm-2 col-form-label" })
                               
                                 <div class="col-sm-10">
-                                    @Html.TextBoxFor(model => model.Tipo, new { htmlAttributes = new { @class = "form-control col-md-2" } })
-                                    @Html.ValidationMessageFor(model => model.Tipo, "", new { @class = "text-danger" })
+                                    @Html.TextAreaFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control col-md-2" } })
+                                    @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "col-sm-2 col-form-label" })
+                                @Html.LabelFor(model => model.NumeroOne, htmlAttributes: new { @class = "col-sm-2 col-form-label" })
                               
                                 <div class="col-sm-10">
-                                    @Html.TextBoxFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control col-md-2" } })
-                                    @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                @Html.LabelFor(model => model.Numero, htmlAttributes: new { @class = "col-sm-2 col-form-label" })
-                              
-                                <div class="col-sm-10">
-                                    @Html.TextBoxFor(model => model.Numero, new { htmlAttributes = new { @class = "form-control col-md-2" } })
-                                    @Html.ValidationMessageFor(model => model.Numero, "", new { @class = "text-danger" })
+                                    @Html.TextBoxFor(model => model.NumeroOne, new { htmlAttributes = new { @class = "form-control col-md-2" } })
+                                    @Html.ValidationMessageFor(model => model.NumeroOne, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -49,35 +40,43 @@ ViewBag.Title="Inventario - Equipo de Computo - Crear ";
                                 </div>
                             </div>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.Procesador, htmlAttributes: new { @class = "col-sm-2 col-form-label" })
+                                @Html.LabelFor(model => model.Tipo, htmlAttributes: new { @class = "col-sm-2 col-form-label" })
                               
                                 <div class="col-sm-10">
-                                    @Html.TextBoxFor(model => model.Procesador, new { htmlAttributes = new { @class = "form-control col-md-2" } })
-                                    @Html.ValidationMessageFor(model => model.Procesador, "", new { @class = "text-danger" })
+                                    @Html.TextBoxFor(model => model.Tipo, new { htmlAttributes = new { @class = "form-control col-md-2" } })
+                                    @Html.ValidationMessageFor(model => model.Tipo, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.Observacion, htmlAttributes: new { @class = "col-sm-2 col-form-label" })
+                                @Html.LabelFor(model => model.Caracteristicas, htmlAttributes: new { @class = "col-sm-2 col-form-label" })
                               
                                 <div class="col-sm-10">
-                                    @Html.TextAreaFor(model => model.Observacion, new { htmlAttributes = new { @class = "form-control col-md-2" } })
-                                    @Html.ValidationMessageFor(model => model.Observacion, "", new { @class = "text-danger" })
+                                    @Html.TextAreaFor(model => model.Caracteristicas, new { htmlAttributes = new { @class = "form-control col-md-2" } })
+                                    @Html.ValidationMessageFor(model => model.Caracteristicas, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.Accesorio, htmlAttributes: new { @class = "col-sm-2 col-form-label" })
+                                @Html.LabelFor(model => model.Modelo, htmlAttributes: new { @class = "col-sm-2 col-form-label" })
                               
                                 <div class="col-sm-10">
-                                    @Html.TextAreaFor(model => model.Accesorio, new { htmlAttributes = new { @class = "form-control col-md-2" } })
-                                    @Html.ValidationMessageFor(model => model.Accesorio, "", new { @class = "text-danger" })
+                                    @Html.TextBoxFor(model => model.Modelo, new { htmlAttributes = new { @class = "form-control col-md-2" } })
+                                    @Html.ValidationMessageFor(model => model.Modelo, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.FechaAlta, htmlAttributes: new { @class = "col-sm-2 col-form-label" })
+                              
+                                <div class="col-sm-10">
+                                    @Html.Awe().DatePickerFor(model => model.FechaAlta)<!--, new { htmlAttributes = new { class = "form-control col-md-2" } })-->
+                                    @Html.ValidationMessageFor(model => model.FechaAlta, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="form-group row">
                                 
-                                @Html.LabelFor(model => model.FechaAlta, htmlAttributes: new { @class = "col-sm-2 coltrol-label" })
+                                @Html.LabelFor(model => model.Accesorio, htmlAttributes: new { @class = "col-sm-2 coltrol-label" })
                                 <div class="col-sm-10">
-                                    @Html.TextBoxFor(model => model.FechaAlta, new { htmlAttributes = new { @class = "form-control col-md-2",type="date" } })
-                                    @Html.ValidationMessageFor(model => model.FechaAlta, "", new { @class = "text-danger" })
+                                    @Html.TextBoxFor(model => model.Accesorio, new { htmlAttributes = new { @class = "form-control col-md-2",type="date" } })
+                                    @Html.ValidationMessageFor(model => model.Accesorio, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="form-group row">
