--- a/OMI/Views/Inventario/CreateVarios.cshtml
+++ b/OMI/Views/Inventario/CreateVarios.cshtml
@@ -22,18 +22,18 @@
                     
 
                     <div class="form-group  row">
-                        @Html.LabelFor(model => model.Tipo, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-sm-10">
-                            @Html.TextBoxFor(model => model.Tipo, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Tipo, "", new { @class = "text-danger" })
+                            @Html.TextAreaFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group row">
-                        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.NumeroOne, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-sm-10">
-                            @Html.TextBoxFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                            @Html.TextBoxFor(model => model.NumeroOne, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.NumeroOne, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
@@ -46,13 +46,26 @@
                     </div>
 
                     <div class="form-group row">
+                        @Html.LabelFor(model => model.Tipo, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-sm-10">
+                            @Html.TextBoxFor(model => model.Tipo, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Tipo, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        @Html.LabelFor(model => model.Modelo, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-sm-10">
+                            @Html.TextBoxFor(model => model.Modelo, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Modelo, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group row">
                         @Html.LabelFor(model => model.FechaAlta, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-sm-10">
-                            @Html.TextBoxFor(model => model.FechaAlta, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.Awe().DatePickerFor(model => model.FechaAlta)
                             @Html.ValidationMessageFor(model => model.FechaAlta, "", new { @class = "text-danger" })
                         </div>
                     </div>
-
                     <div class="form-group row">
                         @Html.LabelFor(model => model.Estado, "Estado", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-sm-10">
@@ -64,10 +77,12 @@
                     </div>
 
                     <div class="form-group row">
-                        @Html.LabelFor(model => model.Modelo, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Especialista, "Usuario", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-sm-10">
-                            @Html.TextBoxFor(model => model.Modelo, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Modelo, "", new { @class = "text-danger" })
+                            @Html.DropDownList("Especialista", ViewBag.Usuario as SelectList, "Seleccione", htmlAttributes: new { @class = "form-control" })
+
+                            @Html.ValidationMessageFor(model => model.Especialista, "", new { @class = "text-danger" })
+
                         </div>
                     </div>
 
