--- a/OMI/Views/Inventario/EditLic.cshtml
+++ b/OMI/Views/Inventario/EditLic.cshtml
@@ -19,6 +19,14 @@
                     @Html.HiddenFor(model => model.Id)
 
                     <div class="form-group row">
+                        @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.TextBoxFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
                         @Html.LabelFor(model => model.Tipo, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.TextBoxFor(model => model.Tipo, new { htmlAttributes = new { @class = "form-control" } })
@@ -27,57 +35,34 @@
                     </div>
 
                     <div class="form-group row">
-                        @Html.LabelFor(model => model.Software, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Modelo, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.TextBoxFor(model => model.Software, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Software, "", new { @class = "text-danger" })
+                            @Html.TextBoxFor(model => model.Modelo, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Modelo, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group row">
-                        @Html.LabelFor(model => model.FCompra, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.FechaAlta, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.TextBoxFor(model => model.FCompra, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.FCompra, "", new { @class = "text-danger" })
+                            @Html.Awe().DatePickerFor(model=>model.FechaAlta)
+                            @Html.ValidationMessageFor(model => model.FechaAlta, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group row">
                         @Html.LabelFor(model => model.FInstalacion, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.TextBoxFor(model => model.FInstalacion, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.Awe().DatePickerFor(model => model.FInstalacion)
                             @Html.ValidationMessageFor(model => model.FInstalacion, "", new { @class = "text-danger" })
                         </div>
                     </div>
-
+                    
                     <div class="form-group row">
                         @Html.LabelFor(model => model.FCaducidad, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.TextBoxFor(model => model.FCaducidad, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.Awe().DatePickerFor(model => model.FCaducidad)
                             @Html.ValidationMessageFor(model => model.FCaducidad, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        @Html.LabelFor(model => model.CuentaVinculada, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.TextBoxFor(model => model.CuentaVinculada, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.CuentaVinculada, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        @Html.LabelFor(model => model.Version, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.TextBoxFor(model => model.Version, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Version, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        @Html.LabelFor(model => model.Estado, "Estado", htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.DropDownList("Estado", ViewBag.Estado as SelectList, "Seleccione", htmlAttributes: new { @class = "form-control" })
                         </div>
                     </div>
 
@@ -88,7 +73,12 @@
                             @Html.ValidationMessageFor(model => model.Observacion, "", new { @class = "text-danger" })
                         </div>
                     </div>
-        
+                    <div class="form-group row">
+                        @Html.LabelFor(model => model.Estado, "Estado", htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.DropDownList("Estado", ViewBag.Estado as SelectList, "Seleccione", htmlAttributes: new { @class = "form-control" })
+                        </div>
+                    </div>
                     <div class="form-group row">
                         @Html.LabelFor(model => model.IdEquipoUso, "IdEquipoUso", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
