--- a/OMI/Views/Organizacion/Reglamento.cshtml
+++ b/OMI/Views/Organizacion/Reglamento.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Organizacíon - Reglamento";
+    ViewBag.Title = "Organizacíon - Reglamento Interno";
 }
 
 <div class="row">
@@ -28,32 +28,32 @@
                   
                 </p>
                 <br/>
-                <ul>
-                    <li> 1. Divulgar información confidencial relativa a procesos, métodos, estrategias, planes, proyectos, datos técnicos, de mercado o de cualquier otro tipo.
+                <ul style="list-style: none; ">
+                    <li> 1 Divulgar información confidencial relativa a procesos, métodos, estrategias, planes, proyectos, datos técnicos, de mercado o de cualquier otro tipo.
 
                     <li>
-                        2. Cualquier incumplimiento o Acto no considerado en la Planificación de los servicios que ponga en riesgo la Calidad de los trabajos propiedad del cliente o de la Empresa.
+                        2 Cualquier incumplimiento o Acto no considerado en la Planificación de los servicios que ponga en riesgo la Calidad de los trabajos propiedad del cliente o de la Empresa.
                     </li>
                     <li>
-                        4. Cualquier incumplimiento a los lineamientos del cuidado del ambiente o cualquier Acto que afecte la preservación ambiental.
+                        4 Cualquier incumplimiento a los lineamientos del cuidado del ambiente o cualquier Acto que afecte la preservación ambiental.
                     </li>
                     <li>
-                        5. El Conflicto de Intereses, en la conducción de sus responsabilidades profesionales y en sus acciones personales.
+                        5 El Conflicto de Intereses, en la conducción de sus responsabilidades profesionales y en sus acciones personales.
                     </li>
                     <li>
-                        6. Cualquier incumplimiento a los lineamientos de Salud y Seguridad o cualquier Acto que ponga en riesgo la salud y seguridad propia o de las personas, así como Acoso laboral, sexual, introducir bebidas Alcohólicas, drogas, fumar dentro de las instalaciones y negarse a participar en evacuaciones o simulacros con fines de seguridad.
+                        6 Cualquier incumplimiento a los lineamientos de Salud y Seguridad o cualquier Acto que ponga en riesgo la salud y seguridad propia o de las personas, así como Acoso laboral, sexual, introducir bebidas Alcohólicas, drogas, fumar dentro de las instalaciones y negarse a participar en evacuaciones o simulacros con fines de seguridad.
                     </li>
                     <li>
-                        7. Utilizar el mobiliario y las herramientas de trabajo para fines distintos al desempeño de sus labores; así como instalar en las computadoras software ajenos a la Empresa.
+                        7 Utilizar el mobiliario y las herramientas de trabajo para fines distintos al desempeño de sus labores; así como instalar en las computadoras software ajenos a la Empresa.
                     </li>
                     <li>
-                        8. Discriminar a las personas por razones de género, estado civil, edad, religión, raza, opinión política, clase social o económica, embarazo, lengua, origen étnico, nacionalidad, preferencia sexual o discapacidad.
+                        8 Discriminar a las personas por razones de género, estado civil, edad, religión, raza, opinión política, clase social o económica, embarazo, lengua, origen étnico, nacionalidad, preferencia sexual o discapacidad.
                     </li>
                     <li>
-                        9. Permitir la entrada a las instalaciones o centros de trabajo de la Empresa así como el uso del equipo a personas ajenas a la misma sin previa autorización de un supervisor facultado.
+                        9 Permitir la entrada a las instalaciones o centros de trabajo de la Empresa así como el uso del equipo a personas ajenas a la misma sin previa autorización de un supervisor facultado.
                     </li>
                     <li>
-                        10. Portar armas de cualquier clase dentro de la Empresa o en los vehículos propiedad de la misma y tomar cualquier tipo de represalia o incurrir en actos de intimidación con motivo del trabajo.
+                        10 Portar armas de cualquier clase dentro de la Empresa o en los vehículos propiedad de la misma y tomar cualquier tipo de represalia o incurrir en actos de intimidación con motivo del trabajo.
                     </li>
                 </ul>
                 <p id="firma" ><span>
