--- a/OMI/Content/Site.css
+++ b/OMI/Content/Site.css
@@ -1,9 +1,9 @@
-﻿body {
+﻿/*body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
 
-/* Set padding to keep content from hitting the edges */
+ Set padding to keep content from hitting the edges * /
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
@@ -11,7 +11,7 @@
 
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
-*/
+* /
 .dl-horizontal dt {
     white-space: normal;
 }
@@ -20,5 +20,6 @@
 input,
 select,
 textarea {
-
+    width: auto;
+  
 }
