--- a/OMI/Views/Admon/Historial.cshtml
+++ b/OMI/Views/Admon/Historial.cshtml
@@ -1,20 +1,19 @@
 ﻿@model IEnumerable<OIM_DAL.Sp_Historial_Result>
 @{
-    ViewBag.Title = "Historial";
+    ViewBag.Title = "Historial de orden de Compra";
 }
 
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-border panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title">Ingenieria Aplicada OnePro  </h3>
+                <h4 class="panel-title"><i class="fa fa-pencil-square fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;@ViewBag.Title</h4>
             </div>
             <div class="panel-body">
                 
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <label>Historial de Orden de Compra</label>
                             <table id="assets-data-table" class="table table-striped table-bordered" style="width: 100%">
                                 <thead>
                                 <tr>
