--- a/OMI/Views/Inventario/EditEquipo.cshtml
+++ b/OMI/Views/Inventario/EditEquipo.cshtml
@@ -90,7 +90,15 @@
 
                            </div>
                        </div>       
-                      
+                       <div class="form-group row">
+                           @Html.LabelFor(model => model.Estado, "Estado", htmlAttributes: new { @class = "control-label col-md-2" })
+                           <div class="col-md-10">
+                               @Html.DropDownList("Estado", ViewBag.Estados as SelectList, "Seleccione", htmlAttributes: new { @class = "form-control" })
+
+                               @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
+
+                           </div>
+                       </div>
                            
                        <div class="form-group row">
                            <div class="offset-sm-2 col-sm-10">
