--- a/OMI/Views/Inventario/EditVehiculo.cshtml
+++ b/OMI/Views/Inventario/EditVehiculo.cshtml
@@ -1,10 +1,12 @@
-﻿
-@model OIM_DAL.TbInve_Vehiculos
+﻿@model OIM_DAL.TbInve_Vehiculos
 @{
     ViewBag.Title = "Inventario - Vehiculo - Edit";
 }
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
+     @Html.AntiForgeryToken()
+    @Html.HiddenFor(model => model.Id)   
+     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <div class="row">
         <div class="col-md-12">
@@ -13,14 +15,13 @@
                     <h4 class="panel-title"><i class="fa fa-pencil-square fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;@ViewBag.Title</h4>
                 </div>
                 <div class="panel-body">
-                    @Html.AntiForgeryToken()
-    @Html.HiddenFor(model=> model.Id)
+                   
                     <div class="container">
        
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                       
                        
 
-                        <div class="form-group">
+                        <div class="form-group row">
                             @Html.LabelFor(model => model.Placas, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
                                 @Html.TextBoxFor(model => model.Placas, new { htmlAttributes = new { @class = "form-control" } })
@@ -28,15 +29,23 @@
                             </div>
                         </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Codigo, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.TextBoxFor(model => model.Codigo, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Codigo, "", new { @class = "text-danger" })
+                                @Html.TextAreaFor(model => model.Descripcion,  htmlAttributes : new { @class = "form-control",cols="100%",rows="4" } )
+                                @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.NumeroOne, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.TextBoxFor(model => model.NumeroOne, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.NumeroOne, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
                             @Html.LabelFor(model => model.Tipo, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
                                 @Html.TextBoxFor(model => model.Tipo, new { htmlAttributes = new { @class = "form-control" } })
@@ -44,39 +53,7 @@
                             </div>
                         </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.FechaAlta, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.TextBoxFor(model => model.FechaAlta, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.FechaAlta, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Factura, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.TextBoxFor(model => model.Factura, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Factura, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Arrendadora, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.TextBoxFor(model => model.Arrendadora, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Arrendadora, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.TextBoxFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="form-group">
+                        <div class="form-group row">
                             @Html.LabelFor(model => model.Serie, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
                                 @Html.TextBoxFor(model => model.Serie, new { htmlAttributes = new { @class = "form-control" } })
@@ -84,11 +61,46 @@
                             </div>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.FechaAlta, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.Awe().DatePickerFor(model => model.FechaAlta)
+                                @Html.ValidationMessageFor(model => model.FechaAlta, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.Factura, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.TextBoxFor(model => model.Factura, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Factura, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.Arrendadora, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.TextBoxFor(model => model.Arrendadora, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Arrendadora, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
                             @Html.LabelFor(model => model.RentaMensual, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
                                 @Html.TextBoxFor(model => model.RentaMensual, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.RentaMensual, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    
+
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.Estatus, "Estatus", htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-sm-10">
+                                @Html.DropDownList("Estatus", ViewBag.Estatus as SelectList, "Seleccione", htmlAttributes: new { @class = "form-control" })
+
+                                @Html.ValidationMessageFor(model => model.Estatus, "", new { @class = "text-danger" })
+
                             </div>
                         </div>
 
