--- a/OMI/Views/Organizacion/Organigrama.cshtml
+++ b/OMI/Views/Organizacion/Organigrama.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Organizacíon - Organigrama";
+    ViewBag.Title = "Organizacíon - Organigrama Interno";
 }<div class="row">
     <div class="col-md-12">
         <div  id="imprimir" class="panel panel-border panel-primary">
