--- a/OMI/Views/Solicitud/AllSolicitud.cshtml
+++ b/OMI/Views/Solicitud/AllSolicitud.cshtml
@@ -14,7 +14,7 @@
             </div>
             <div class="panel-body">
                 
-
+<!--
                 <p>
                     <a class="btn btn-success" id="NuevoPedido" href="@Url.Action("NuevaSolicitud","Solicitud" ,new { id=-1})">Solicitud de Productos / Servicios</a>
 
@@ -23,7 +23,7 @@
                     <a class="btn btn-success" id="NuevoPersonal" href="@Url.Action("Index","Personal" ,new { id=-1})">Solicitud de Personal</a>
 
                 </p>
-
+                -->
                 <table id="assets-data-table" class="table table-striped table-bordered" style="width:100%">
                     <thead>
                         <tr>
@@ -41,7 +41,7 @@
                                 @Html.DisplayNameFor(model => model.TbUsuario.Nombre)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.EnviadoInfra)
+                                @Html.DisplayNameFor(model => model.Tb_Estado_OnOff.Nombre)
                             </th>
                             <th>
                                 Opciones
@@ -70,7 +70,7 @@
                                 </td>
                                 <td>
                                     <div id="@item.IdSolicitud">
-                                        @Html.DisplayFor(modelItem => item.EnviadoInfra)
+                                        @Html.DisplayFor(modelItem => item.Tb_Estado_OnOff1.Nombre)
                                     </div>
                                 </td>
 
