--- a/OMI/Views/Admon/SolicitudCotizacion.cshtml
+++ b/OMI/Views/Admon/SolicitudCotizacion.cshtml
@@ -12,7 +12,7 @@
                 <h4 class="panel-title"><i class="fa fa-pencil-square fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;@ViewBag.Title</h4>
             </div>
             <div class="panel-body">
-                @using (Html.BeginForm("ordencompra", "Admon", FormMethod.Post))
+                @using (Html.BeginForm("SolicitudCotizacion", "Admon", FormMethod.Post))
                 {
                     <button type="submit" class="btn btn-success">Gnerar Orden</button>
                     <table id="assets-data-table" class="table table-striped table-bordered" style="width: 100%">
